@@ -2,7 +2,7 @@ package com.example.devhouse.user_things.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -12,7 +12,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -32,15 +32,11 @@ public class WebSecurityConfig {
                 .and()
                 .csrf().disable()
                 .authorizeRequests()
-                .requestMatchers("/api/register/**").permitAll() // Allow access to /api/register/** without authentication
-                .requestMatchers("/api/login").permitAll()
-                .requestMatchers("/logout").permitAll()
-                .requestMatchers("/api/**").authenticated()
-                .anyRequest().authenticated()
+                .requestMatchers("/**").permitAll() // Allow access to all URLs without authentication
                 .and()
                 .logout()
                 .logoutUrl("/logout") // Set the URL for logout
-                .logoutSuccessUrl("/api/login") // Redirect to /login?logout after successful logout
+                .logoutSuccessUrl("/api/login?logout") // Redirect to /api/login?logout after successful logout
                 .invalidateHttpSession(true) // Invalidate the HTTP session
                 .deleteCookies("JSESSIONID") // Delete the JSESSIONID cookie
                 .clearAuthentication(true) // Clear the authentication
@@ -51,18 +47,16 @@ public class WebSecurityConfig {
                 .build();
     }
 
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Allow requests from any origin
-        configuration.setAllowedMethods(List.of("*"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("*")); // Allow requests from any origin
+        configuration.setAllowedMethods(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true); // Allow credentials (cookies)
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
 }
-
